...
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            >
                <CheckBox
                    android:id="@+id/year_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textSize="@dimen/option_size"
                />
                <EditText
                    android:id="@+id/year_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/year_hint"
                    android:inputType="number"
                    android:singleLine="true"
...
                    android:singleLine="true"
                />
            </TableRow>
        </TableLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/check"
        app:layout_anchor="@id/scroll_filter"
...
