...
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:padding="3dp">

    <CheckBox
        android:id="@+id/checkmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkMark="@drawable/checkmark"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
...
